--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 author: Scriblon
-database: false
+database: true
 description: Extension on PreciousStones. Adding upkeep cost in form of a configurable
   item.
 generator: http://dinnerbone.com/minecraft/tools/pluginator/
@@ -7,3 +7,4 @@ main: me.scriblon.plugins.expensivestones.Expensivestones
 name: ExpensiveStones
 startup: postworld
 version: '0.1'
+depend: PreciousStones
