Added some code to blockListener. Chached some recuring commands on 'finished' Need something to get ExpensiveField by Sign location. Considering making an extra map or a funciton that iterate along all known fields. It is either memory or cpu!

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         </dependency>
         <dependency>
             <groupId>org.PreciousStones</groupId>
-            <artifactId>org.PreciousStones</artifactId>
+            <artifactId>PreciousStones</artifactId>
             <version>7.0.5</version>
         </dependency>
     </dependencies>
