Still Debugging queries.
Asked help on bukkit.org, hope it will result in something!
Last commit for today.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 author: Scriblon
-database: true
+database: false
 description: Extension on PreciousStones. Adding upkeep cost in form of a configurable
   item.
 generator: http://dinnerbone.com/minecraft/tools/pluginator/
